# rattlescript

./: .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .guix-channel  .pre-commit-config.yaml  0-AI-MANIFEST.a2ml  AUDIT.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  PROOF-STATUS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  ROADMAP.adoc  SECURITY.md  TEMPLATE-STANDARDS-AUDIT.adoc  TEST-NEEDS.md  TOPOLOGY.md  build.rs  eclexiaiser.toml  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS  SECURITY.md  copilot-instructions.md  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: boj-build.yml  codeql.yml  dogfood-gate.yml  governance.yml  hypatia-scan.yml  (+6 more)
.machine_readable/: CLADE.a2ml  ECOSYSTEM.a2ml  ENSAID_CONFIG.a2ml  INTENT.contractile  META.a2ml  MUST.contractile
.well-known/: ai.txt  humans.txt  security.txt
container/: .gatekeeper.yaml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
docs/: RSR_OUTLINE.adoc  STATE-VISUALIZER.adoc  tech-debt-2026-05-26.md
examples/: hello.affine  hello.rattle  ownership.rattle
src/: main.rs
tests/: aspect_tests.sh  e2e.sh
(+60 files in other folders)
