# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2024-2026 Jonathan D.A. Jewell (hyperpolymath)

[package]
name        = "rattle"
version     = "0.1.0"
edition     = "2021"
description = "Python-syntax AffineScript — write Python-style code, get affine resource guarantees"
license     = "PMPL-1.0-or-later"
authors     = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository  = "https://github.com/hyperpolymath/rattlescript"
keywords    = ["affinescript", "python-face", "wasm", "affine-types", "linear-types"]
categories  = ["development-tools", "compilers"]

[dependencies]
# Pure Rust thin wrapper — no external dependencies.

[build-dependencies]
# build.rs detects or requires AFFINESCRIPT_BIN at compile time

[[bin]]
name = "rattle"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto       = true
strip     = true
